2009-08-18  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs:
	* InterfaceBuilder/IBObject.cs: Fix warnings.

2009-08-14  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Create the directory for the Xcode
	  project.

2009-08-14  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Include the output file.

2009-08-14  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs:
	* MonoDevelop.IPhone.addin.xml: Add a Debug in Xcode command.

2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneViewController.xft.xml: Add a view and
	  connect it to the view controller.

2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneViewController.xft.xml: Add an intptr ctor.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* InterfaceBuilder/IBObject.cs: Change deserialization order
	  so the stack doesn't get so deep.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs:
	* InterfaceBuilder/IBDocument.cs:
	* InterfaceBuilder/IBConnectionRecord.cs: Generalised
	  connection record handling so we don't choke on desktop
	  xibs.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs:
	* InterfaceBuilder/IBReference.cs:
	* InterfaceBuilder/IBConnectionRecord.cs: Lazily resolve the
	  ClassDescriptionSource on a class description instead of
	  assuming it's resolved.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>

	* InterfaceBuilder/IBObject.cs: Better parsing of
	  "base64-UTF8" strings. Add support for any primitive to have
	  an id.

2009-08-07  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Fix fx package name.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Use TrimEnd instead of Substring for
	  action names, in the C# code generation path. Also switch
	  from Trim to TrimEnd in the CodeDOM path.
