@@ -1,5 +1,12 @@
 2009-08-18  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* IPhoneExecutionHandler.cs: Rework the file tailing and the
+	  cleanup and disposal of the threads and file handles.
+	  Hopefully fixes fix "Bug 531110 - MonoTouch: Application
+	  Output window stops working".
+
+2009-08-18  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* IPhoneBuildExtension.cs:
 	* InterfaceBuilder/IBObject.cs: Fix warnings.
 
